--- a/src/templates/partials/_welcome.html
+++ b/src/templates/partials/_welcome.html
@@ -2,16 +2,27 @@
     <div class="container container--no-padding" data-aos="fade-up">
         <figure class="hero">
             <figcaption class="hero__message">
-                <h1 class="hero__title">unique-tech<br> app development</h1>
-                <p class="hero__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt
-                    ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco. laboris
-                    nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa
+                <h1 class="hero__title">
+                    <span class="hero__title--nowrap">
+                        unique-tech
+                    </span>
+                    <span class="hero__title--nowrap">
+                            app development
+                    </span>
+                </h1>
+                <p class="hero__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+                    incididunt
+                    ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.
+                    laboris
+                    nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit
+                    esse
+                    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+                    culpa
                     qui officia deserunt mollit.</p>
                 <a class="button__icon--right" href="#">View More</a>
             </figcaption>
             <div class="hero__image">
-
+                <img class="hero__image--static" src="./img/png/macbook_1.png" alt="macbook">
                 <img class="slider--big__background" src="./img/png/MacBook_black_screen.png" alt="">
 
                 <div class="slider--big">
