--- a/src/scss/_buttons.scss
+++ b/src/scss/_buttons.scss
@@ -207,6 +207,13 @@
     }
 }
 
+@media only screen and (max-width: 470px) {
+    .section-name {
+        font-size: 20px;
+        line-height: 16px;
+    }
+}
+
 @media only screen and (max-width: 360px) {
     .section-name {
         font-size: 16px;
