text-align center for h2

--- a/src/scss/_buttons.scss
+++ b/src/scss/_buttons.scss
@@ -14,9 +14,9 @@
     padding: 13px 14px;
     margin-top: 130px;
     margin-bottom: 145px;
-    margin-left: 50%;
+    // margin-left: 50%;
     border-radius: 2px;
-    transform: translateX(-50%);
+    // transform: translateX(-50%);
     box-shadow: $h2-box-shadow;
     &--mw330 {
         min-width: 330px;
