--- a/src/templates/partials/_features.html
+++ b/src/templates/partials/_features.html
@@ -1,12 +1,15 @@
 <section class="features">
     <div class="container features__container" data-aos="fade-up">
-        <h2 class="features__heading section-name section-name--mw330  section-name--arrow-r">our features</h2>
+        <div class="text-center">
+            <h2 class="features__heading section-name section-name--mw330  section-name--arrow-r">our features</h2>
+        </div>
         <div class="features__content">
             <div class="features__section">
                 <img class="features__img" src="img/svg/icons/notes27.svg" alt="paper">
                 <div>
                     <h3 class="features__head">Visual Composer</h3>
-                    <p class="features__paragraph">TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with our. </p>
+                    <p class="features__paragraph">TheFox comes with the Visual Composer Plugin. You won’t need to code
+                        or to remember any shortcodes with our. </p>
                 </div>
             </div>
             <div class="features__section">
@@ -14,77 +17,88 @@
 
                 <div>
                     <h3 class="features__head">Responsive</h3>
-                    <p class="features__paragraph">TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with our. </p>
+                    <p class="features__paragraph">TheFox comes with the Visual Composer Plugin. You won’t need to code
+                        or to remember any shortcodes with our. </p>
                 </div>
             </div>
             <div class="features__section">
                 <img class="features__img" src="img/svg/icons/notebook79.svg" alt="laptop">
                 <div>
                     <h3 class="features__head">Retina Ready</h3>
-                    <p class="features__paragraph">TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with our. </p>
+                    <p class="features__paragraph">TheFox comes with the Visual Composer Plugin. You won’t need to code
+                        or to remember any shortcodes with our. </p>
                 </div>
             </div>
             <div class="features__section">
                 <img class="features__img" src="img/svg/icons/pencil124.svg" alt="pencil">
                 <div>
                     <h3 class="features__head">Typography</h3>
-                    <p class="features__paragraph">TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with our. </p>
+                    <p class="features__paragraph">TheFox comes with the Visual Composer Plugin. You won’t need to code
+                        or to remember any shortcodes with our. </p>
                 </div>
             </div>
             <div class="features__section">
                 <img class="features__img" src="img/svg/icons/wallet35.svg" alt="wallet">
                 <div>
                     <h3 class="features__head">Theme Options Pannel</h3>
-                    <p class="features__paragraph">TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with our. </p>
+                    <p class="features__paragraph">TheFox comes with the Visual Composer Plugin. You won’t need to code
+                        or to remember any shortcodes with our. </p>
                 </div>
             </div>
             <div class="features__section">
                 <img class="features__img" src="img/svg/icons/hand224.svg" alt="pointer">
                 <div>
                     <h3 class="features__head">Dummy Content</h3>
-                    <p class="features__paragraph">TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with our. </p>
+                    <p class="features__paragraph">TheFox comes with the Visual Composer Plugin. You won’t need to code
+                        or to remember any shortcodes with our. </p>
                 </div>
             </div>
             <div class="features__section">
                 <img class="features__img" src="img/svg/icons/globe32.svg" alt="globe">
                 <div>
                     <h3 class="features__head">Many Style Available</h3>
-                    <p class="features__paragraph">TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with our. </p>
+                    <p class="features__paragraph">TheFox comes with the Visual Composer Plugin. You won’t need to code
+                        or to remember any shortcodes with our. </p>
                 </div>
             </div>
             <div class="features__section">
                 <img class="features__img" src="img/svg/icons/cropping4.svg" alt="crop tool">
                 <div>
                     <h3 class="features__head">Header Style</h3>
-                    <p class="features__paragraph">TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with our. </p>
+                    <p class="features__paragraph">TheFox comes with the Visual Composer Plugin. You won’t need to code
+                        or to remember any shortcodes with our. </p>
                 </div>
             </div>
             <div class="features__section">
                 <img class="features__img" src="img/svg/icons/bag45.svg" alt="bag">
                 <div>
                     <h3 class="features__head">10000+ icons</h3>
-                    <p class="features__paragraph">TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with our. </p>
+                    <p class="features__paragraph">TheFox comes with the Visual Composer Plugin. You won’t need to code
+                        or to remember any shortcodes with our. </p>
                 </div>
             </div>
             <div class="features__section">
                 <img class="features__img" src="img/svg/icons/dish7.svg" alt="satelite dish">
                 <div>
                     <h3 class="features__head">Support</h3>
-                    <p class="features__paragraph">TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with our. </p>
+                    <p class="features__paragraph">TheFox comes with the Visual Composer Plugin. You won’t need to code
+                        or to remember any shortcodes with our. </p>
                 </div>
             </div>
             <div class="features__section">
                 <img class="features__img" src="img/svg/icons/wealth.svg" alt="diamond">
                 <div>
                     <h3 class="features__head">Update</h3>
-                    <p class="features__paragraph">TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with our. </p>
+                    <p class="features__paragraph">TheFox comes with the Visual Composer Plugin. You won’t need to code
+                        or to remember any shortcodes with our. </p>
                 </div>
             </div>
             <div class="features__section">
                 <img class="features__img" src="img/svg/icons/soft4.svg" alt="soft drink">
                 <div>
                     <h3 class="features__head">SEO Ready</h3>
-                    <p class="features__paragraph">TheFox comes with the Visual Composer Plugin. You won’t need to code or to remember any shortcodes with our. </p>
+                    <p class="features__paragraph">TheFox comes with the Visual Composer Plugin. You won’t need to code
+                        or to remember any shortcodes with our. </p>
                 </div>
             </div>
         </div>
