--- a/src/templates/partials/_packages.html
+++ b/src/templates/partials/_packages.html
@@ -1,6 +1,8 @@
 <section class="packages">
     <div class="container" data-aos="fade-up">
-        <h2 class="section-name section-name--mw330  section-name--arrow-l">OUR PACKAGES</h2>
+        <div class="text-center">
+            <h2 class="section-name section-name--mw330  section-name--arrow-l">OUR PACKAGES</h2>
+        </div>
         <div class="packages__table">
             <div class="packages__coll">
                 <h4 class="coll__name packages--grey">BASIC</h4>
