--- a/src/templates/partials/_projects.html
+++ b/src/templates/partials/_projects.html
@@ -1,10 +1,14 @@
 <section class="projects">
     <div class="container" data-aos="fade-up">
-        <h2 class="projects__name section-name section-name--mw446 section-name--arrow-r">OUR BUSINESS RELATED PROJECTS</h2>
+        <div class="text-center">
+            <h2 class="projects__name section-name section-name--mw446 section-name--arrow-r">OUR BUSINESS RELATED
+                PROJECTS</h2>
+        </div>
         <div class="projects__block">
             <a href="#" class="projects__link ">
                 <figure class="projects__figure">
-                    <object class="projects__img" type="image/svg+xml" data="img/svg/technical_aid.svg">Your browser does not support SVGs</object>
+                    <object class="projects__img" type="image/svg+xml" data="img/svg/technical_aid.svg">Your browser
+                        does not support SVGs</object>
                     <figcaption class="projects__caption">
                         <p>TECHNICAL AID</p>
                     </figcaption>
@@ -20,7 +24,8 @@
             </a>
             <a href="#" class="projects__link ">
                 <figure class="projects__figure">
-                    <object class="projects__img" type="image/svg+xml" data="img/svg/market_research.svg">MARKET RESEARCH</object>
+                    <object class="projects__img" type="image/svg+xml" data="img/svg/market_research.svg">MARKET
+                        RESEARCH</object>
                     <figcaption class="projects__caption ">
                         <p>MARKET RESEARCH</p>
                     </figcaption>
