--- a/src/templates/partials/_services.html
+++ b/src/templates/partials/_services.html
@@ -1,7 +1,9 @@
 <section class="services">
     <div class="container" data-aos="fade-up">
+        <div class="text-center">
 
-        <h2 class="section-name section-name--mw330 section-name--arrow-r">what we do</h2>
+            <h2 class="section-name section-name--mw330 section-name--arrow-r">what we do</h2>
+        </div>
         <div class="services__container">
             <div class="services__block">
                 <img class="services__image services__size" src="img/png/macbook_1.png" alt="macbook">
