--- a/src/templates/partials/_support.html
+++ b/src/templates/partials/_support.html
@@ -1,12 +1,17 @@
 <section class="support">
     <div class="container" data-aos="fade-up">
-        <h2 class="support__name section-name section-name--mw446  section-name--arrow-r">UPDATES & SUPPORT</h2>
-        <!-- <svg class="airplane"></svg> -->
+        <div class="text-center">
+            <h2 class="support__name section-name section-name--mw446  section-name--arrow-r">UPDATES & SUPPORT</h2>
+        </div>
         <div class="suppport__inner">
             <img class="support__img" src="img/png/macbook_2.png" alt="macbook">
             <div class="support__text">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
-                    aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
+                    et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+                    aliquip ex ea commodo consequat. Duis
+                    aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+                    Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id
+                    est laborum.</p>
                 <p> Sed ut perspiciatis unde omnis iste natus error sit voluptatem.</p>
             </div>
             <button class="support_button yellow-btn">SUPPORT CENTER</button>
