--- a/src/templates/partials/_process.html
+++ b/src/templates/partials/_process.html
@@ -1,6 +1,8 @@
 <section class="process">
     <div class="container" data-aos="fade-up">
-        <h2 class="section-name section-name--mw330 section-name--arrow-l">how we work</h2>
+        <div class="text-center">
+            <h2 class="section-name section-name--mw330 section-name--arrow-l">how we work</h2>
+        </div>
         <div class="process__content">
             <img src="./img/svg/big_pic/big_pic.svg" alt="process scheme">
         </div>
