--- a/src/scss/_buttons.scss
+++ b/src/scss/_buttons.scss
@@ -77,7 +77,7 @@
 .yellow-btn {
     text-transform: uppercase;
     background-color: $color-mainYellow;
-    appearance: none;
+    // appearance: none;
     border: 0;
     white-space: nowrap;
     user-select: none;
