--- a/src/scss/_process.scss
+++ b/src/scss/_process.scss
@@ -2,6 +2,7 @@
 
 .process {
     background: url('../img/png/pattern.png');
+    overflow: hidden;
     &__content {
 padding-bottom: 110px;
     }
