--- a/src/templates/partials/_services.html
+++ b/src/templates/partials/_services.html
@@ -19,7 +19,8 @@
                     <button type="button" class="yellow-btn services__btn open-button">view more </button>
                 </article>
             </div>
-            <div class="services__block services__block--reverse">
+            <div class="services__block">
+                <img class="services__image services__size" src="img/png/macbook_1.png" alt="macbook">
                 <article class="services__content">
                     <h3 class="services__header">search engine optimization</h3>
                     <p class="services__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
@@ -31,7 +32,6 @@
                     </p>
                     <button type="button" class="yellow-btn services__btn open-button">view more </button>
                 </article>
-                <img class="services__image services__size" src="img/png/macbook_1.png" alt="macbook">
 
             </div>
             <div class="services__block">
