--- a/src/templates/partials/_welcome.html
+++ b/src/templates/partials/_welcome.html
@@ -1,5 +1,5 @@
 <section class="welcome welcome--bgColor">
-    <div class="container container--no-padding" data-aos="fade-up">
+    <div class="container welcome__container container--no-padding" data-aos="fade-up">
         <figure class="hero">
             <figcaption class="hero__message">
                 <h1 class="hero__title">
