--- a/src/scss/_footer.scss
+++ b/src/scss/_footer.scss
@@ -103,6 +103,7 @@
     }
     .footer-inner__menu {
         padding: 10px;
+        max-width: 100vw;
     }
     .container--footer {
         padding: 0;
