--- a/src/scss/_services.scss
+++ b/src/scss/_services.scss
@@ -1,6 +1,7 @@
 .services {
     display: flex;
     flex-direction: column;
+    padding-bottom: 21px;
     &__container {
         margin-top: -63px;
     }
@@ -9,13 +10,16 @@
         flex-wrap: wrap;
         justify-content: space-between;
         padding: 104px 31px;
-        height: 100%;
+        &:nth-child(even) {
+            flex-direction: row-reverse;
+        }
+        // height: 100%;
     }
     &__size {
-        height: 100%;
+        // height: 100%;
     }
     &__image {
-        // width: 41%;
+        // width: 100%;
         // margin-bottom: -11px;
         // margin-right: 21px;
     }
