--- a/src/scss/_welcome.scss
+++ b/src/scss/_welcome.scss
@@ -3,6 +3,9 @@
     width: 100vw;
     padding-top: 150px;
     min-height: 100vh;
+    &__container {
+        // height: 100%;
+    }
     &--bgColor {
         background-color: $color-mainYellow;
     }
@@ -11,8 +14,7 @@
 .hero {
     position: relative;
     display: flex;
-    flex-wrap: wrap-reverse;
-    // height: calc(100vh - 300px);
+    flex-wrap: wrap-reverse; // height: calc(100vh - 300px);
     &:after,
     &:before {
         content: "";
@@ -145,7 +147,7 @@
     }
 }
 
-@media only screen and (max-width: 1000px) {
+@media (max-width: 1000px) {
     .hero {
         flex-direction: column-reverse;
         justify-content: center;
@@ -177,24 +179,14 @@
             padding: 0;
         }
         &--big {
-
-            &__background {
-
-            }
+            &__background {}
         }
     }
 }
 
-@media only screen and (max-width: 900px) {
-.welcome {
-    padding-top: 100px;
-}
-
-}
-
-@media only screen and (max-width: 768px) {
-    .hero {
-
+@media (max-width: 900px) {
+    .welcome {
+        padding-top: 100px;
     }
 }
 
@@ -205,7 +197,6 @@
             width: 100%;
             height: unset;
             text-align: center;
-
             & * {
                 display: none;
             }
@@ -221,5 +212,24 @@
             min-width: unset;
             width: unset;
         }
+    }
+}
+
+@media (min-height: 950px) {
+    .welcome {
+        display: flex;
+        align-items: center;
+    }
+    .hero__title {
+        width: 400px;
+    }
+}
+
+@media (max-height: 750px) and (max-width: 900px) {
+    .welcome {
+        padding-top: 80px;
+    }
+    .hero__title {
+        margin-top: 0;
     }
 }
