--- a/src/scss/_process.scss
+++ b/src/scss/_process.scss
@@ -11,6 +11,7 @@ padding-bottom: 110px;
     .process {
         &__content {
             margin: 0 -45px;
+            padding-bottom: 60px;
         }
     }
 }
