--- a/src/scss/_team.scss
+++ b/src/scss/_team.scss
@@ -5,12 +5,12 @@
         display: flex;
         justify-content: center;
         flex-wrap: wrap;
-        padding-top: 60px;
-        padding-bottom: 25px;
+        padding-top: 41px;
+        padding-bottom: 5px;
         // margin-bottom: 130px;
     }
     &__member {
-        padding: 0 23px;
+        padding: 20px 23px;
         width: 171px;
         display: flex;
         flex-direction: column;
