--- a/src/scss/_footer.scss
+++ b/src/scss/_footer.scss
@@ -90,7 +90,7 @@
 
 @media (max-width: 520px) {
     .footer-inner__list {
-        width: 45%;
+        width: calc(50vw - 40px);
     }
 }
 
@@ -106,6 +106,6 @@
         max-width: 100vw;
     }
     .container--footer {
-        padding: 0;
+        // padding: 0;
     }
 }
