--- a/src/scss/_services.scss
+++ b/src/scss/_services.scss
@@ -12,16 +12,14 @@
         padding: 104px 31px;
         &:nth-child(even) {
             flex-direction: row-reverse;
-        }
-        // height: 100%;
+        } // height: 100%;
     }
     &__size {
         // height: 100%;
     }
     &__image {
-        // width: 100%;
-        // margin-bottom: -11px;
-        // margin-right: 21px;
+        max-width: 48%;
+        object-fit: contain;
     }
     &__content {
         display: flex;
@@ -37,11 +35,9 @@
         text-transform: uppercase;
     }
     &__text {
-        font-weight: $p-font-weight;
-        // font-size: $p-font-size;
+        font-weight: $p-font-weight; // font-size: $p-font-size;
         font-size: 14px;
-        color: $h3-font-color;
-        // line-height: $p-line-height;
+        color: $h3-font-color; // line-height: $p-line-height;
         line-height: 22.4px;
         margin-top: 14px;
         margin-bottom: 12px;
@@ -56,4 +52,26 @@
     position: fixed;
     bottom: 20px;
     right: 20px;
+}
+
+@media (max-width: 768px) {
+    .services {
+        &__block {
+            padding: 50px 0;
+        }
+    }
+}
+
+@media (max-width: 650px) {
+    .services {
+        &__content,
+        &__image {
+            max-width: 100%;
+            width: 100%;
+            margin: 10px 0;
+        }
+        &__block {
+            padding: 30px 0;
+        }
+    }
 }
