--- a/src/templates/partials/_welcome.html
+++ b/src/templates/partials/_welcome.html
@@ -23,31 +23,33 @@
             </figcaption>
             <div class="hero__image">
                 <img class="hero__image--static" src="./img/png/macbook_1.png" alt="macbook">
-                <img class="slider--big__background" src="./img/png/MacBook_black_screen.png" alt="">
+                <img class="slider--big__background b-lazy"
+                src="./img/png/MacBook_black_screen_small.gif"
+                data-src="./img/png/MacBook_black_screen.png" alt="macbook">
 
                 <div class="slider--big">
                     <div class="slider--big__slide">
-                        <img src="./img/png/macbook_slide_01.png" alt="">
+                        <img src="./img/png/macbook_slide_01.png" alt="macbook screen">
                     </div>
                     <div class="slider--big__slide">
-                        <img src="./img/png/macbook_slide_02.png" alt="">
+                        <img src="./img/png/macbook_slide_02.png" alt="macbook screen">
                     </div>
                     <div class="slider--big__slide">
-                        <img src="./img/png/macbook_slide_03.png" alt="">
+                        <img src="./img/png/macbook_slide_03.png" alt="macbook screen">
                     </div>
                 </div>
 
-                <img class="slider--small__background" src="./img/png/iPhone_black_screen.png" alt="">
+                <img class="slider--small__background" src="./img/png/iPhone_black_screen.png" alt="iPhone">
 
                 <div class="slider--small">
                     <div class="slider--small__slide">
-                        <img src="./img/png/iphone_slide_01.png" alt="">
+                        <img src="./img/png/iphone_slide_01.png" alt="iphone screen">
                     </div>
                     <div class="slider--big__slide">
-                        <img src="./img/png/iphone_slide_02.png" alt="">
+                        <img src="./img/png/iphone_slide_02.png" alt="iphone screen">
                     </div>
                     <div class="slider--big__slide">
-                        <img src="./img/png/iphone_slide_03.png" alt="">
+                        <img src="./img/png/iphone_slide_03.png" alt="iphone screen">
                     </div>
                 </div>
                 <div class="slider__dots"></div>
