add blazy for biggest pics

--- a/src/templates/partials/_hire_us.html
+++ b/src/templates/partials/_hire_us.html
@@ -3,7 +3,7 @@
         <div class="hire">
             <div class="hire__wrap">
 
-                <img class="hire__img" src="img/png/hire_clean.png" alt="hand work">
+                <img class="hire__img b-lazy" src="./img/png/hire_clean_small.jpg" data-src="./img/png/hire_clean.png" alt="hand work">
                 <div class="hire__img--overlay"></div>
             </div>
             <div class="hire__content">
