--- a/src/templates/partials/_history.html
+++ b/src/templates/partials/_history.html
@@ -2,8 +2,8 @@
     <div class="container history__container" data-aos="fade-up">
         <div class="history__left">
             <div class="history__image">
-                <img class="history__image--background" src="img/png/happy_clerk.gif" alt="happy clerk">
-                <img class="history__image--hover" src="img/svg/happy_clerk_lamp.svg" alt="lamp">
+                <img class="history__image--background b-lazy" data-src="./img/svg/happy_clerk.svg" src="./img/png/happy_clerk.gif" alt="happy clerk">
+                <img class="history__image--hover" src="./img/svg/happy_clerk_lamp.svg" alt="lamp">
             </div>
         </div>
 
