--- a/src/templates/partials/_process.html
+++ b/src/templates/partials/_process.html
@@ -4,7 +4,7 @@
             <h2 class="section-name section-name--mw330 section-name--arrow-l">how we work</h2>
         </div>
         <div class="process__content">
-            <img src="./img/svg/big_pic/big_pic.svg" alt="process scheme">
+            <img class="b-lazy" src="./img/svg/big_pic/big_pic_small.gif" data-src="./img/svg/big_pic/big_pic.svg" alt="process scheme">
         </div>
     </div>
 </section>
