--- a/src/templates/partials/_welcome.html
+++ b/src/templates/partials/_welcome.html
@@ -29,13 +29,13 @@
 
                 <div class="slider--big">
                     <div class="slider--big__slide">
-                        <img src="./img/png/macbook_slide_01.png" alt="macbook screen">
+                        <img class="b-lazy" data-src="./img/png/macbook_slide_01.png" src="./img/png/macbook_slide_01_small.gif" alt="macbook screen">
                     </div>
                     <div class="slider--big__slide">
-                        <img src="./img/png/macbook_slide_02.png" alt="macbook screen">
+                        <img class="b-lazy" data-src="./img/png/macbook_slide_02.png" src="./img/png/macbook_slide_02_small.gif" alt="macbook screen">
                     </div>
                     <div class="slider--big__slide">
-                        <img src="./img/png/macbook_slide_03.png" alt="macbook screen">
+                        <img class="b-lazy" data-src="./img/png/macbook_slide_03.png" src="./img/png/macbook_slide_03_small.gif" alt="macbook screen">
                     </div>
                 </div>
 
