--- a/src/templates/partials/_services.html
+++ b/src/templates/partials/_services.html
@@ -6,7 +6,7 @@
         </div>
         <div class="services__container">
             <div class="services__block">
-                <img class="services__image services__size" src="img/png/macbook_1.png" alt="macbook">
+                <img class="services__image services__size b-lazy" data-src="img/png/macbook_1.png" src="img/png/macbook_1_small.gif" alt="macbook">
                 <article class="services__content">
                     <h3 class="services__header">web design</h3>
                     <p class="services__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
@@ -20,7 +20,7 @@
                 </article>
             </div>
             <div class="services__block">
-                <img class="services__image services__size" src="img/png/macbook_1.png" alt="macbook">
+                <img class="services__image services__size b-lazy" data-src="img/png/macbook_1.png" src="img/png/macbook_1_small.gif" alt="macbook">
                 <article class="services__content">
                     <h3 class="services__header">search engine optimization</h3>
                     <p class="services__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
@@ -35,7 +35,7 @@
 
             </div>
             <div class="services__block">
-                <img class="services__image services__size" src="img/png/macbook_1.png" alt="macbook">
+                <img class="services__image services__size b-lazy" data-src="img/png/macbook_1.png" src="img/png/macbook_1_small.gif" alt="macbook">
                 <article class="services__content">
                     <h3 class="services__header">affiliate marketting</h3>
                     <p class="services__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
