--- a/src/scss/_packages.scss
+++ b/src/scss/_packages.scss
@@ -1,4 +1,3 @@
-
 .packages {
     &__table {
         width: 90%;
@@ -64,7 +63,7 @@
         display: inline-block;
         font-size: 35px;
         padding: 55px 0 48px 0;
-        transition: transform 0.75s ease-in;
+        transition: all 0.75s ease-in;
     }
     &__name {
         font-size: 22px;
