--- a/src/templates/partials/_footer.html
+++ b/src/templates/partials/_footer.html
@@ -40,16 +40,16 @@
             </nav>
             <div class="footer-inner__social">
                 <div class="social">
-                    <a class="social__block" href="#">
+                    <a class="social__block" href="#" aria-label="facebook">
                         <i class="social__icon fab fa-facebook-f"></i>
                     </a>
-                    <a class="social__block" href="#">
+                    <a class="social__block" href="#" aria-label="twitter">
                         <i class="social__icon fab fa-twitter"></i>
                     </a>
-                    <a class="social__block" href="#">
+                    <a class="social__block" href="#" aria-label="google">
                         <i class="social__icon fab fa-google-plus-g"></i>
                     </a>
-                    <a class="social__block" href="#">
+                    <a class="social__block" href="#" aria-label="linkedin">
                         <i class="social__icon fab fa-linkedin-in"></i>
                     </a>
                 </div>
