--- a/src/templates/partials/_header.html
+++ b/src/templates/partials/_header.html
@@ -4,7 +4,7 @@
             <div class="logo__element logo__element--bordered logo__element--light">UNIQUE</div>
             <div class="logo__element">TECH</div>
         </a>
-        <button class="nav__burger">
+        <button class="nav__burger" aria-label="open or close navigation panel">
             <i class="nav__burger--open fas fa-bars"></i>
             <i class="nav__burger--close hide fas fa-times"></i>
         </button>
