--- a/src/templates/partials/_modal.html
+++ b/src/templates/partials/_modal.html
@@ -19,14 +19,14 @@
         <div class="modal">
             <h2 class="modal__head">Hire Us</h2>
             <form class="modal__form" name="hire_us">
-                <input type="email" name="email" id="email" class="modal__email" placeholder="Your email" required>
-                <input type="text" name="full-name" id="full-name" class="modal__name" placeholder="Your Name" required>
-                <textarea name="message" class="modal__textarea" placeholder="Your message"></textarea>
+                <input type="email" name="email" id="email" class="modal__email" placeholder="Your email" required aria-label="email">
+                <input type="text" name="full-name" id="full-name" class="modal__name" placeholder="Your Name" required aria-label="your name">
+                <textarea name="message" class="modal__textarea" placeholder="Your message" aria-label="your message"></textarea>
                 <!--<input type="submit" name="submit" class="modal__submit" value="SEND" onclick="sendMail()">-->
                 <button class="button__icon--right modal__submit">Send</button>
 
             </form>
-            <button class="modal__close" id="modal__close">
+            <button class="modal__close" id="modal__close" aria-label="Close">
                     <i class="nav__burger--close fas fa-times"></i>
             </button>
         </div>
