--- a/src/templates/partials/_services.html
+++ b/src/templates/partials/_services.html
@@ -50,7 +50,7 @@
             </div>
         </div>
     </div>
-    <a href="javascript:" id="return-to-top" class="button--round">
+    <a href="javascript:" id="return-to-top" class="button--round" aria-label="return to top">
         <i class="icon fas fa-chevron-up"></i>
     </a>
 </section>
