fix class in packages

--- a/src/templates/partials/_support.html
+++ b/src/templates/partials/_support.html
@@ -4,7 +4,7 @@
             <h2 class="support__name section-name section-name--mw446  section-name--arrow-r">UPDATES & SUPPORT</h2>
         </div>
         <div class="suppport__inner">
-            <img class="b-lazy" class="support__img" data-src="img/png/macbook_2.png" src="img/png/macbook_2_small.gif" alt="macbook">
+            <img class="b-lazy support__img" data-src="img/png/macbook_2.png" src="img/png/macbook_2_small.gif" alt="macbook">
             <div class="support__text">
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
                     et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
